--- a/public/css/style.css
+++ b/public/css/style.css
@@ -903,8 +903,41 @@ body {
   padding: 5rem 7rem;
   border-radius: 5px;
 }
+.alerts {
+  position: fixed;
+  z-index: 10000;
+  width: 13.500em;
+  top: 1em;
+  right: 1em;
+}
 
+.alerts > div {
+  padding: .8em;
+  margin-bottom: .4em;
+  background-color: rgba(200, 200, 200, 0.8);
+  cursor: default;
+}
 .form__input {
+  display: block;
+  font-family: inherit;
+  font-size: 1.5rem;
+  color: inherit;
+  padding: 1.25rem 1.75rem;
+  border: none;
+  width: 100%;
+  background-color: #fff;
+  background-color: #f2f2f2;
+  border-top: 3px solid transparent;
+  border-bottom: 3px solid transparent;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  border-radius: 4px;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  /* Pseudo element (a visible thing that isn't really in the DOM).
+      Also needs -ms- */
+}
+.form__select {
   display: block;
   font-family: inherit;
   font-size: 1.5rem;
