--- a/views/allloanlists.pug
+++ b/views/allloanlists.pug
@@ -1,23 +1,25 @@
 extends baseTemplate
 
 block content 
-  h1 This is dynamic LoanList Overview
+  h1 This is dynamic loan list Overview
   div
     table.table-header
       thead
         tr
-          th(scope='col') Name 
-          th(scope='col') loanType 
-          th(scope='col') loanNumber 
-          th(scope='col') Amount 
-          th(scope='col') interestRate 
-          th(scope='col') loanTermYears 
+          th(scope='col') Name
+          th(scope='col') Loan Type
+          th(scope='col') Loan Number
+          th(scope='col') Amount
+          th(scope='col') Interest Rate
+          th(scope='col') Loan Term Years
+          th(scope='col') Calculated Loan Amount
       tbody
-        each loan in loans 
+        each loan in loans
           tr.table-secondary
-            td=loan.Name
-            th=loan.loanType 
+            td=loan.name
+            td=loan.loanType
             td=loan.loanNumber
             td=loan.Amount
-            td=loan.interestRate
+            td=Math.round(loan.interestRate*100)
             td=loan.loanTermYears
+            td=loan.calculatedLoanAmount
