--- a/views/myloanlists.pug
+++ b/views/myloanlists.pug
@@ -12,6 +12,7 @@ block content
           th(scope='col') Amount
           th(scope='col') Interest Rate
           th(scope='col') loanTermYears
+          th(scope='col') Calculated Loan Amount
       tbody
         each loan in loans
           tr.table-secondary
@@ -19,5 +20,6 @@ block content
             td=loan.loanType
             td=loan.loanNumber
             td=loan.Amount
+            td=Math.round(loan.interestRate*100)
             td=loan.interestRate
             td=loan.loanTermYears
