--- a/views/newLoan.pug
+++ b/views/newLoan.pug
@@ -1,42 +1,47 @@
-extend baseTemplate 
+extends baseTemplate
 
-block content  
-  // <section class="overview">
-  h1 Create new loan overview
+block content 
+  h1 This is Create new loan Overview
   main.main
     .card-container
       .card
         .card__header
           h3.heading-tertirary
-            span create a new loan
+            span Create a new loan
         .card__details
-          h4.card__sub-heading New Loan information 
+          h4.card__sub-heading New Loan information
           p.card__text
-            | Please enter the following Details
+          |   Please enter the following Details
           .card__data
             svg.card__icon
               use(xlink:href='img/icons.svg#icon-map-pin')
-            form(action='/api/v1/loans' method='post')
-              label(for='fname') Name:
+            form(action='/api/v1/loans/' method='post')
+              label(for='name') Name:
               input#name(type='text' name='name')
               br
               br
-              label(for='loanType') loanType:
-              input#email(type='loanType' name='loanType')
-              label(for='startDate') startDate:
+              label(for='loanType') Loan Type:
+              select#loanType.select.form-control.input-lg(name='loanType')
+                option(value='Home') Home
+                option(value='Auto') Auto
+                option(value='Boat') Boat
+                option(value='Life') Life
+              br
+              br
+              label(for='startDate') Start Date:
               input#email(type='startDate' name='startDate')
               br
               br
-              label(for='loanNumber') loanNumber:
-              input#loanNumber(type='loanNumber' name='loanNumber')
-              label(for='loanTermYears') loanTermYears:
-              input#loanTermYears(type='' name='loanTermYears')
+              label(for='loanNumber') Loan Number:
+              input#password(type='loanNumber' name='loanNumber')
+              label(for='loanTermYears') Loan Term Years:
+              input#password(type='loanTermYears' name='loanTermYears')
               br
               br
               label(for='Amount') Amount:
-              input#Amount(type='Amount' name='Amount')
-              label(for='interestRate') interestRate:
-              input#interestRate(type='interestRate' name='interestRate')
+              input#cpassword(type='Amount' name='Amount')
+              label(for='interestRate') Interest Rate:
+              input#cpassword(type='interestRate' name='interestRate')
               br
               br
               input.card__sub-heading(type='submit' value='Submit')
